홈화면 구조 및 블로그 제목 변경: 최신 포스트+카테고리, 타이틀 한글화

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "🏄‍♂️ dongnyeok"
+title: "파도가올땐서핑을"
 author:
-  name: dongnyeok
+  name: 파도가올땐서핑을
   email: dongnyeok@me.com
 
 # The `>` after `description:` means to ignore line-breaks until next key.
