fix : 날짜 표기 오류 해결 및 새 일기 포스팅 추가

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "파도가올땐서핑을"
+title: "🏄‍♂️파도가올땐서핑을"
 author:
-  name: 파도가올땐서핑을
+  name: 녘
   email: dongnyeok@me.com
 
 # The `>` after `description:` means to ignore line-breaks until next key.
